--- a/assets/template/css/main.css
+++ b/assets/template/css/main.css
@@ -49,7 +49,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 [ Slick2 ]*/
 .slick-slide {outline: none !important;}
 
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
 
 
@@ -166,7 +166,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 /*---------------------------------------------*/
 .left-top-bar {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 12px;
   line-height: 1.8;
   color: #b2b2b2;
@@ -175,7 +175,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 /*---------------------------------------------*/
 .right-top-bar a {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 12px;
   line-height: 1.8;
 
@@ -303,7 +303,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .main-menu > li > a {
- font-family: 'Quicksand', sans-serif;
+ font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #333;
   padding: 5px 0px;
@@ -358,7 +358,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .sub-menu a {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.5;
   color: #555;
@@ -428,7 +428,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 /*---------------------------------------------*/
 .icon-header-noti::after {
   content: attr(data-notify);
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 12px;
   color: #fff;
   line-height: 15px;
@@ -496,7 +496,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 /*---------------------------------------------*/
 .wrap-search-header input {
- font-family: 'Quicksand', sans-serif;
+ font-family: 'Poppins', sans-serif;
   font-size: 50px;
   line-height: 1.2;
   color: #333;
@@ -672,7 +672,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .main-menu-m > li > a {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: white;
   line-height: 2.8;
@@ -726,7 +726,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .sub-menu-m a {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #666;
   line-height: 2.5;
@@ -964,7 +964,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 .header-cart-item-name {
   display: block;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #555;
   line-height: 1.3;
@@ -972,14 +972,14 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 
 .header-cart-item-info {
   display: block;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #888;
   line-height: 1.5;
 }
 
 .header-cart-total {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
   color: #222;
   line-height: 1.3;
@@ -1024,7 +1024,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 /*------------------------------------------------------------------
 [ in select ]*/
 .rs1-select2 .select2-container .select2-selection--single .select2-selection__rendered {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 13px;
   color: #555;
   line-height: 1.2;
@@ -1101,7 +1101,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .rs1-select2 .select2-results__options {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 13px;
   color: #555;
   line-height: 1.2;
@@ -1110,7 +1110,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 .rs1-select2 .select2-search--dropdown .select2-search__field {
   border: 1px solid #aaa;
   outline: none;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 13px;
   color: #555;
   line-height: 1.2;
@@ -1259,7 +1259,7 @@ Input, textarea : 14px/1.6 '', Arial, sans-serif;
 }
 
 .caption-dots-slick1 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.3;
   color: #fff;
@@ -1548,7 +1548,7 @@ button.mfp-close {
 }
 
 .tab01 .nav-link {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   color: #888;
   line-height: 1.2;
@@ -1587,7 +1587,7 @@ button.mfp-close {
 
 .swal-button {
   background-color: #717fe0;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   color: white;
   text-transform: uppercase;
@@ -1608,7 +1608,7 @@ button.mfp-close {
 }
 
 .swal-title {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #333333;
   font-size: 18px;
   line-height: 1.5;
@@ -1616,7 +1616,7 @@ button.mfp-close {
 }
 
 .swal-text {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #555555;
   font-size: 16px;
   line-height: 1.666667;
@@ -1760,7 +1760,7 @@ input.num-product::-webkit-inner-spin-button {
 
 .tooltip100::after {
   content: attr(data-tooltip);
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 12px;
   color: #888;
   line-height: 18px;
@@ -1897,7 +1897,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .table-shopping-cart .table_head th {
- font-family: 'Quicksand', sans-serif;
+ font-family: 'Poppins', sans-serif;
   font-size: 13px;
   color: #555;
   text-transform: uppercase;
@@ -1907,7 +1907,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .table-shopping-cart td {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: #555;
   line-height: 1.6;
 }
@@ -2031,7 +2031,7 @@ input.num-product::-webkit-inner-spin-button {
 
 .label-new::after {
   content: attr(data-label);
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 12px;
   color: #fff;
   line-height: 1.2;
@@ -2075,75 +2075,75 @@ input.num-product::-webkit-inner-spin-button {
 /*//////////////////////////////////////////////////////////////////
 [ S-Text 0 - 15 ]*/
 .stext-101 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.466667;
   text-transform: uppercase;
 }
 
 .stext-102 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.7;
 }
 
 .stext-103 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.466667;
 }
 
 .stext-104 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.466667;
 }
 
 .stext-105 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.466667;
   letter-spacing: 1px;
 }
 
 .stext-106 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.2;
 }
 
 .stext-107 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 13px;
   line-height: 1.923;
 }
 
 .stext-108 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.7143;
 }
 
 .stext-109 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 12px;
   line-height: 1.833333;
 }
 
 .stext-110 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.466667;
 }
 
 .stext-111 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 13px;
   line-height: 1.6923;
 }
 
 .stext-112 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 13px;
   line-height: 1.6923;
   text-transform: uppercase;
@@ -2162,13 +2162,13 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .stext-115 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.666667;
 }
 
 .stext-116 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.266667;
 }
@@ -2217,7 +2217,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .mtext-105 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 24px;
   line-height: 1.5;
 }
@@ -2229,13 +2229,13 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .mtext-107 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.625;
 }
 
 .mtext-108 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 20px;
   line-height: 1.3;
 }
@@ -2248,7 +2248,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .mtext-110 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
   line-height: 1.222222;
 }
@@ -2276,7 +2276,7 @@ input.num-product::-webkit-inner-spin-button {
 /*//////////////////////////////////////////////////////////////////
 [ L-Text >= 26 ]*/
 .ltext-101 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 28px;
   line-height: 1.2857;
 }
@@ -2334,14 +2334,14 @@ input.num-product::-webkit-inner-spin-button {
 
 /*---------------------------------------------*/
 .ltext-201 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 60px;
   line-height: 1.1;
   text-transform: uppercase;
 }
 
 .ltext-202 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 28px;
   line-height: 1.2857;
 }
@@ -2745,7 +2745,7 @@ input.num-product::-webkit-inner-spin-button {
 
 .label1::after {
   content: attr(data-label1);
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 10px;
   line-height: 15px;
   color: #fff;
@@ -2803,7 +2803,7 @@ input.num-product::-webkit-inner-spin-button {
 
 /*---------------------------------------------*/
 .how-pagination1 {
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   color: #808080;
 
