--- a/assets/template/css/main.css
+++ b/assets/template/css/main.css
@@ -2150,7 +2150,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .stext-113 {
-  font-family: Poppins-Light;
+  font-family: 'Poppins', sans-serif;
   font-size: 14px;
   line-height: 1.7857;
 }
@@ -2174,7 +2174,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .stext-117 {
-  font-family: Poppins-Light;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
   line-height: 1.666667;
 }
@@ -2192,26 +2192,26 @@ input.num-product::-webkit-inner-spin-button {
 /*//////////////////////////////////////////////////////////////////
 [ M-Text 16 - 25 ]*/
 .mtext-101 {
-  font-family: Poppins-Medium;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
   line-height: 1.333333;
 }
 
 .mtext-102 {
-  font-family: Poppins-SemiBold;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.6;
 }
 
 .mtext-103 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 18px;
   line-height: 1.333333;
   text-transform: uppercase;
 }
 
 .mtext-104 {
-  font-family: Poppins-Medium;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 1.6;
 }
@@ -2223,7 +2223,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .mtext-106 {
-  font-family: Poppins-SemiBold;
+  font-family: 'Poppins', sans-serif;
   font-size: 18px;
   line-height: 1.388888;
 }
@@ -2241,7 +2241,7 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .mtext-109 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 20px;
   line-height: 1.3;
   text-transform: uppercase;
@@ -2254,19 +2254,19 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .mtext-111 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 25px;
   line-height: 1.2;
 }
 
 .mtext-112 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 22px;
   line-height: 1.333333;
 }
 
 .mtext-113 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 22px;
   line-height: 1.333333;
   text-transform: uppercase;
@@ -2282,51 +2282,51 @@ input.num-product::-webkit-inner-spin-button {
 }
 
 .ltext-102 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 28px;
   line-height: 1.1;
 }
 
 .ltext-103 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 36px;
   line-height: 1.1;
   text-transform: uppercase;
 }
 
 .ltext-104 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 60px;
   line-height: 1.1;
   text-transform: uppercase;
 }
 
 .ltext-105 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 50px;
   line-height: 1.1;
 }
 
 .ltext-106 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 36px;
   line-height: 1.2;
 }
 
 .ltext-107 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 30px;
   line-height: 1.1;
 }
 
 .ltext-108 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 26px;
   line-height: 1.3846;
 }
 
 .ltext-109 {
-  font-family: Poppins-Bold;
+  font-family:'Poppins', sans-serif;
   font-size: 36px;
   line-height: 1.2;
 }
